--- a/example/vanilla-cafe/index.html
+++ b/example/vanilla-cafe/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/components/button.ts"></script>
     <script type="module" src="/src/components/counter.ts"></script>
+    <link rel="stylesheet" href="./src/style.css" />
     <title>Vite + TS</title>
   </head>
   <body>
-    hello
-    
+    <h1>Counter Example</h1>
+    <view-counter></view-counter>
+    <increment-button></increment-button>
   </body>
 </html>
